--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.8.1",
     "graphql-tag": "2.12",
     "graphql-yoga": "^4.0.5",
+    "joi": "^17.12.2",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
     "react": "^18",
