--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.1.3",
     "next": "14.1.0",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.44.3",
     "react-icons": "4.9",
